--- a/dresden/index.html
+++ b/dresden/index.html
@@ -109,7 +109,7 @@
                         samodzielną osadę na prawym brzegu Łaby Starym Dreznem „Antiqua Dressin”, a w 1403 roku
                         landgraf Wilhelm I uznał tę osadę oficjalnie za miasto.</p>
                     <img src="drezno2.jpg" alt="drezno2">
-                    <h2 id="zabytki">zabytki miasta</h2>
+                    <h2 id="zabytki">Zabytki miasta</h2>
                     <ul>
                         <li>Stare miasto w Dreźnie</li>
                         <p>Stare miasto to właściwie centrum Drezna, w którego obrębie ulokowane są najważniejsze
@@ -132,7 +132,7 @@
                         <p>Galeria, która znajduje się w pałacu barokowym pałacu Zwinger to jedna z najchętniej odwiedzanych galerii w całych Niemczech. Kolekcjonowanie dzieł rozpoczął już książę August Wettyn, a jego poczynania dokończyli polscy władcy August II i August III Sas. To właśnie za ich sprawą udało się sprowadzić do Drezna najokazalsze dzieła sztuki, m.in. „Madonnę Sykstyńską” Rafaela</p>
                         <img src="galeria.jpg" alt="galeria">
                     </ul>
-                    <h2 id="sławniludzie">sławni ludzie z państwa</h2>
+                    <h2 id="sławniludzie">Sławni ludzie z państwa</h2>
                     <ul>
                         <li>August II Mocny</li>
                         <p> w latach 1697 do 1706 i 1709 do 1733 elekcyjny król Polski; pierwszy król Polski z saskiej dynastii Wettynów. Jego przydomek jest zazwyczaj wiązany z jego nieprzeciętną siłą, dzięki której potrafił podobno zginać podkowy gołymi rękoma.</p>
@@ -155,11 +155,11 @@
 
             <div class="sidebar">
                 <div class="container">
-                    <p><a href="#jakieto"><span>1.</span> jakie to miasto?</a></p>
-                    <p><a href="#nazwa"><span>2.</span> nazwa</a></p>
-                    <p><a href="#historia"><span>3.</span> historia</a></p>
-                    <p><a href="#zabytki"><span>4.</span> zabytki miasta</a></p>
-                    <p><a href="#sławniludzie"><span>4.</span> sławni ludzie z miasta</a></p>
+                    <p><a href="#jakieto"><span>1.</span> Jakie to miasto?</a></p>
+                    <p><a href="#nazwa"><span>2.</span> Nazwa</a></p>
+                    <p><a href="#historia"><span>3.</span> Historia</a></p>
+                    <p><a href="#zabytki"><span>4.</span> Zabytki miasta</a></p>
+                    <p><a href="#sławniludzie"><span>4.</span> Sławni ludzie</a></p>
                 </div>
             </div>
         </div>
