--- a/index.html
+++ b/index.html
@@ -38,12 +38,8 @@
         <div class="container">
             <div id="about" data-aos="zoom-in-right">
                 <h1>MIASTA ŚWIATA</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Rem, adipisci facilis sapiente omnis
-                    accusantium
-                    autem <br> alias quisquam voluptatem rerum! Maiores fugiat <br> laudantium eum distinctio veniam
-                    vitae
-                    dolorem
-                    quos <br> facere corporis.</p>
+                <p>Poznaj miasta świata. <br>
+                Stworzone przez klase 1CT PZS nr1 w Pszczynie.</p>
             </div>
             <div class="tiles" data-aos="zoom-in-left">
                 <div class="tile">
@@ -72,7 +68,7 @@
                     <div class="container">
                         <h1>Alicante</h1>
                         <img src="assets/img/prague.jpg" alt="">
-                        <a href="index.html"><button>Dalej!</button></a>
+                        <a href="alicante/"><button>Dalej!</button></a>
                     </div>
                 </div>
             </div>
