--- a/vienna/index.html
+++ b/vienna/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    
     <nav class="navbar navbar-expand-lg navbar-navbar" data-aos="zoom-in-down">
         <div class="container">
             <a class="navbar-brand" href="">MIASTA ŚWIATA</a>
@@ -36,57 +37,122 @@
 
     <section id="content">
         <div class="container">
-            <h1 id="content-header">CITY</h1>
-
+            <h1 id="content-header">Wiedeń</h1>
             <div class="data">
                 <div class="container">
-                    <h1>Lorem Ipsum</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia inventore quidem expedita ratione
-                        molestiae amet recusandae voluptate quis enim officiis dolores reprehenderit eos autem veritatis
-                        tempora quo, pariatur animi nobis.</p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium optio dolorem recusandae magni,
-                        beatae ea quia explicabo. Quis culpa expedita harum unde ad aliquid praesentium, alias, cum mollitia
-                        sequi rem!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum minima porro ex. Exercitationem
-                        enim adipisci saepe eum sit non, ipsum ab aspernatur omnis assumenda eius, delectus similique minima
-                        incidunt.</p>
+
+                    <p>Wiedeń jest stolicą Austrii, kraju niemieckojęzycznego</p>
+                    <h2 id="obj-1">Historia</h2>
+                    <p>Został założony około 500 p.n.e. jako osada celtycka. W 15 p.n.e. stał się rzymskim posterunkiem
+                        granicznym. Prawa miejskie uzyskał w roku 1221, stając się jednym z największych i
+                        najważniejszych miast Świętego Cesarstwa Rzymskiego (Starej Rzeszy), a po jego upadku stolicą
+                        Cesarstwa Austrii, a następnie Austro-Węgier. W roku 1918 stał się stolicą Republiki Austrii.
+                    </p>
+                    <h2 id="obj-2">Najważniejsze atrakcje Wiednia:</h2>
+                    <p>Belweder</p>
+                    <p>Barokowy pałac księcia Eugeniusza Sabaudzkiego, zlokalizowany w Wiedniu, w Austrii. Zaprojektował
+                        go architekt Johann Lucas von Hildebrandt. Składa się z dwóch budynków rozdzielonych ogrodem w
+                        stylu francuskim ozdobionym szeregiem posągów sfinksów. „Górny Belweder” przeznaczony był na
+                        bankiety i uroczystości, „Dolny Belweder” pełnił funkcję letniej rezydencji. W 1752 roku pałac
+                        został wykupiony przez cesarzową Marię Teresę i od 1775 roku z polecenia Józefa II w Belwederze
+                        przechowywano obrazy należące do rodziny cesarskiej. W 1806 roku do Belwederu przeniesiono
+                        również kolekcję obrazów z pałacu Ambras. Jako ostatni członek rodziny Habsburgów urzędował tu
+                        arcyksiążę Franciszek Ferdynand. <a
+                            href="https://pl.wikipedia.org/wiki/Belweder_w_Wiedniu#/media/Plik:Wien_-_Schloss_Belvedere,_oberes_(1).JPG"
+                            target="_blank">Zdjęcie</a></p>
+                    <p>Pałac Schönbrunn</p>
+                    <p>Pałac wraz z parkiem znajdujący się w 13. dzielnicy Wiednia, Hietzingu. Według przekazów nazwę
+                        zarówno parku jak i pałacu przypisuje się cesarzowi Maciejowi Habsburgowi, który podczas
+                        polowania w 1619 znalazł tu źródło artezyjskie i miał je określić mianem pięknego. Sam pałac
+                        został zbudowany w XVII-XVIII w. na zlecenie cesarza Leopolda I, zaprojektowany przez Johanna
+                        Bernharda Fischera von Erlacha. W 1996 pałac został wpisany na listę światowego dziedzictwa
+                        UNESCO. <a
+                            href="https://pl.wikipedia.org/wiki/Pa%C5%82ac_Sch%C3%B6nbrunn#/media/Plik:Schloss_Sch%C3%B6nbrunn_Wien_2014_(Zuschnitt_2).jpg"
+                            target="_blank">Zdjęcie</a></p>
+                    <p>Opera Wiedeńska</p>
+                    <p>Opera znajdująca się w Wiedniu. Gmach ten był pierwszym ukończonym budynkiem przy Ringu. 25 maja
+                        1869 wystawienie opery „Don Giovanni” Mozarta rozpoczęło działalność sceny operowej. Gmach, w
+                        stylu neorenesansowym, spotkał
+                        początkowo z nieprzychylną reakcją wiedeńczyków. Podobno fakt ten uznaje się za przyczynę
+                        popełnienia samobójstwa przez jednego z architektów budynku Eduarda van der Nülla[a]. Jednakże
+                        zniszczenie tego budynku w wyniku bombardowań w 1945 roku uznano za symboliczny cios zadany
+                        miastu. 5 listopada 1955 wystawienie „Fidelia” Beethovena zainaugurowało powojenną działalność
+                        Opery, która zyskała całkowicie nową widownię oraz scenę wyposażoną w najnowocześniejsze
+                        rozwiązania techniczne.
+                        <a href="https://pl.wikipedia.org/wiki/Opera_Wiede%C5%84ska#/media/Plik:Wien_-_Staatsoper_(1).JPG"
+                            target="_blank">Zdjęcie</a>
+                    </p>
+                    <p>Hofburg</p>
+                    <p>Wiedeńska rezydencja władców Austrii od XIII wieku poczynając od Rudolfa I Habsburga aż do 1918
+                        roku w czasach panowania Karola I. Przez cały ten czas pałac był rozbudowywany i przebudowywany
+                        przez kolejnych władców.Początkowo było to czteroskrzydłowy gotycki zamek z wieżami w narożach
+                        przylegający do murówmiejskich, jednak obecnie stylem dominującym jest barok i klasycyzm.
+                        Najstarszą częścią jestXIII-wieczny „Dziedziniec Szwajcarski” połączony renesansową „Bramą
+                        Szwajcarską” z największymplacem wśród zabudowań Hofburga – In der Burg. Plac otoczony jest
+                        „starym pałacem” (niem. Alte Burg), „pałacem Amelii” z XVI w., barokowym „skrzydłem Leopolda”
+                        oraz pochodzącą z XVIII w. „Kancelarią Cesarską”. Na placu stoi pomnik Franciszka II. W
+                        „skrzydle Leopolda” obecnie znajduje się rezydencja prezydenta Austrii. W apartamentach
+                        Franciszka Józefa i cesarzowej Elżbiety w budynku „Kancelarii” obecnie mieści się muzeum.
+                        <a href="https://pl.wikipedia.org/wiki/Hofburg#/media/Plik:Burg_Galerie_-_Hofburg.jpg"
+                            target="_blank">Zdjęcie</a>
+                    </p>
+                    <p>Kościół św. Karola Boromeusza</p>
+                    <p>Kościół św. Karola Boromeusza (niem. Karlskirche) w Wiedniu – jedna z najsłynniejszych barokowych
+                        budowli Europy. Kościół wzniesiono na cześć św. Karola Boromeusza, arcybiskupa Mediolanu z
+                        czasów epidemii dżumy w 1576. Świątynia została ufundowana przez Karola VI w 1713 po ostatniej z
+                        wielu epidemii dżumy, które nawiedziły Wiedeń. W konkursie na projekt budowli udział wzięli:
+                        Johann Bernhard Fischer von Erlach, Johann Lucas von Hildebrandt i Galli Bibbiena. Wygrał von
+                        Erlach, według planów którego prowadzono budowę od 1716. Architekt nie doczekał jej końca w
+                        1737, gdyż zmarł 14 lat wcześniej. <a
+                            href="https://pl.wikipedia.org/wiki/Ko%C5%9Bci%C3%B3%C5%82_%C5%9Bw._Karola_Boromeusza_w_Wiedniu#/media/Plik:Karlskirche_Abendsonne_1.jpg"
+                            target="_blank">Zdjęcie</a></p>
+                    <h2 id="obj-3">Ważne osoby:</h2>
+                    <p>Peter Handke</p>
+                    <p>Austriacki pisarz i tłumacz, laureat Nagrody Nobla w dziedzinie literatury za 2019 rok. Jeden z
+                        najbardziej rozpoznawalnych austriackich pisarzy.
+                        <a href="https://pl.wikipedia.org/wiki/Peter_Handke#/media/Plik:Peter-handke.jpg"
+                            target="_blank">Zdjęcie z 2006r.</a>
+                    </p>
+                    <p>Elfriede Jelinek</p>
+                    <p>Austriacka pisarka i feministka, laureatka Literackiej Nagrody Nobla w roku 2004.
+                        <a href="https://pl.wikipedia.org/wiki/Elfriede_Jelinek#/media/Plik:Elfriede_jelinek_2004_small.jpg"
+                            target="_blank">Zdjęcie z 2004r.</a>
+                    </p>
+                    <p>Wolfgang Amadeus Mozart</p>
+                    <p>Austriacki (często też spotyka się określenie niemiecki)[a] kompozytor i wirtuoz gry na
+                        instrumentach klawiszowych, którego twórczość związana była głównie z Wiedniem. Razem z Haydnem
+                        oraz Beethovenem zaliczany jest do trójki tzw. „klasyków wiedeńskich”. Uznawany za jednego z
+                        najwybitniejszych i najważniejszych twórców w historii muzyki.
+                        <a href="https://pl.wikipedia.org/wiki/Wolfgang_Amadeus_Mozart#/media/Plik:Wolfgang-amadeus-mozart_1.jpg"
+                            target="_blank">Zdjęcie</a>
+                    </p>
+                    <p>Gustav Mahler</p>
+                    <p>Austriacki kompozytor i dyrygent. <a
+                            href="https://pl.wikipedia.org/wiki/Gustav_Mahler#/media/Plik:Gustav_Mahler_1909.jpg"
+                            target="_blank">Zdjęcie z 1909</a></p>
+                    <p>Wolfgang Pauli</p>
+                    <p>Szwajcarski fizyk pochodzenia austriackiego, noblista[1]. Jeden z twórców mechaniki kwantowej[2];
+                        od 1928 profesor w Związkowej Wyższej Szkole Technicznej w Zurychu (ETHZ), po 1939 pracujący na
+                        Uniwersytecie w Princeton (w Stanach Zjednoczonych),
+                        <a href="https://pl.wikipedia.org/wiki/Wolfgang_Pauli#/media/Plik:Pauli.jpg">Zdjęcie</a>
+                    </p>
+                    <p>Oskar Kokoschka</p>
+                    <p>Austriacki malarz, poeta i grafik, działający w okresie ekspresjonizmu, najsłynniejszy
+                        przedstawiciel berlińskiej grupy artystycznej Der Sturm, współtworzył również Hagenbund. Od roku
+                        1980 przyznawana jest przez austriackie władze za wybitne osiągnięcia w dziedzinie sztuk
+                        pięknych nagroda jego imienia.
+                        <a href="https://pl.wikipedia.org/wiki/Oskar_Kokoschka#/media/Plik:Oskar_Kokoschka_(1963)_by_Erling_Mandelmann_-_3.jpg">Zdjęcie z 1963r.</a>
+                    </p>
                 </div>
             </div>
-
             <div class="sidebar">
                 <div class="container">
-                    <p><a href="#"><span>1.</span> Navigation 1</a></p>
-                    <p><a href="#"><span>2.</span> Navigation 2</a></p>
-                    <p><a href="#"><span>3.</span> Navigation 3</a></p>
+                    <p><a href="#obj-1"><span>1.</span>Historia</a></p>
+                    <p><a href="#obj-2"><span>2.</span>Najważniejsze atrakcje Wiednia</a></p>
+                    <p><a href="#obj-3"><span>3.</span>Ważne osoby</a></p>
                 </div>
             </div>
+        
         </div>
     </section>
 
