--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="container">
                         <h1>Alicante</h1>
                         <img src="assets/img/prague.jpg" alt="">
-                        <a href="alicante/"><button>Dalej!</button></a>
+                        <a href="alicante/index.html"><button>Dalej!</button></a>
                     </div>
                 </div>
             </div>
